# simple_agent_loop

./: .gitignore  GUIDE.md  LICENSE  README.md  agent_loop.py  compressor.py  derive_transform.py  main.py  message-specs.md  pyproject.toml  test_agent_loop.py
.github/workflows/: python-package.yml  python-publish.yml
examples/: compressor.py  derive_transform.py
src/agent_loop/: __init__.py
src/simple_agent_loop/: __init__.py
test/: test_agent_loop.py
