[project]
name = "simple-agent-loop"
version = "0.1.5"
description = "A minimal agent loop for tool-using language models"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Tom Alcorn" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
anthropic = ["anthropic>=0.79.0"]

[project.urls]
Homepage = "https://github.com/tdb-alcorn/simple_agent_loop"
Repository = "https://github.com/tdb-alcorn/simple_agent_loop"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/simple_agent_loop"]
